# arrow2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
arrow2/: Cargo.toml
arrow2/src/: docs.rs
arrow2/src/array/growable/: README.md
arrow2/src/compute/arithmetics/: mod.rs
arrow2/src/compute/comparison/: mod.rs
arrow2/src/compute/take/: utf8.rs
arrow2/src/util/: test_util.rs
benches/: Cargo.toml
guide/src/: README.md  SUMMARY.md  arrow.md  ffi.md  high_level.md  low_level.md
guide/src/io/: README.md  csv_read.md  csv_write.md
src/: docs.rs  types.rs
src/array/boolean/: iterator.rs
src/compute/: hash.rs
src/compute/merge_sort/: mod.rs
src/io/: mod.rs
src/io/ipc/: mod.rs
src/io/ipc/write/: mod.rs
src/io/parquet/: array_reader.rs  arrow_reader.rs  levels.rs  mod.rs  record_reader.rs  schema.rs
src/io/parquet/read/: boolean.rs  converter.rs  int96.rs  mod.rs  null.rs  primitive.rs  structure.rs  variable_size.rs
